2009-11-10  Jan Arne Petersen  <jpetersen@openismus.com>

	Release 0.3.57

2009-11-06  Jan Arne Petersen  <jpetersen@openismus.com>

	Release 0.3.56

2009-11-06  Jan Arne Petersen  <jpetersen@openismus.com>

	Fixes: NB#135795 - Desktop hanged in a mentioned scenario.

	* src/hd-edit-mode-menu.c:
	* src/hd-edit-mode-menu.h:
	* src/Makefile.am: Extract edit mode menu into an own widget.
	Override GtkWidgetClass->show to only show if no other modal dialog is
	shown.

	* src/hd-hildon-home-dbus.c: Use new HDEditModeMenu.

2009-11-06  Jan Arne Petersen  <jpetersen@openismus.com>

	Fixes: NB#142515 - Increase in memory usage of hildon-home while
	changing theme from layout mode.

	* src/hd-command-thread-pool.c:
	* src/hd-command-thread-pool.h: A thread pool which supports different
	commands.

	* src/Makefile.am: Add new source files.

	* src/hd-backgrounds.c: Restart hildon-home on theme change. Use
	HDCommandThreadPool.
	* src/hd-backgrounds.h: Add hd_backgrounds_set_image_set function to
	set an image set.

	* src/hd-change-background-dialog.c: Use hd_backgrounds_set_image_set
	for image sets.

	* src/hildon-home.c: Clean hildon-home stamp when hildon-home is
	quit on prupose.

2009-11-04  Jan Arne Petersen  <jpetersen@openismus.com>

	Release 0.3.55

2009-11-04  Jan Arne Petersen  <jpetersen@openismus.com>

	Fixes: NB#123966 - Already closed notifications are displayed

	* configure.ac:
	* debian/control: Depend on new libhildondesktop.

	* src/hd-incoming-events.c (notifications_new_for_notification,
	  show_preview_window): Check if notifications were already closed.

	* src/test-notifications.py: Update for test.

2009-11-04  Jan Arne Petersen  <jpetersen@openismus.com>

	Fixes: NB#128853 - list not scrolling to selected item

	* src/hd-change-background-dialog.c (scroll_to_selected,
	add_image_dialog_response): Scroll to selected item in an idle
	handler.

2009-11-04  Jan Arne Petersen  <jpetersen@openismus.com>
